# Pick-Place-StereoCam-UR5-Robotiq-85

./: README.md  Screen Recording Pick Place Task.mov
robotiq/robotiq_description/urdf/: robotiq_85_gripper.urdf.xacro
ur5/ur5_description/config/: ur5_stereocams.rviz
ur5/ur5_description/launch/: display_with_gripper.launch  display_with_gripper_clouds.launch  display_with_gripper_clouds_world.launch
ur5/ur5_description/urdf/: ur.transmission.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robotiq85_gripper_stereocam.urdf.xacro  ur5_robotiq85_gripper_stereocam_world.urdf.xacro
ur5/ur5_gazebo/: package.xml
ur5/ur5_gazebo/launch/: ur5_controllers.launch  ur5_cubes.launch  ur5_setup.launch
ur5/ur5_gazebo/worlds/: ur5_cubes.world
ur5_gripper_moveit_config/: .setup_assistant  package.xml
ur5_gripper_moveit_config/config/: fake_controllers.yaml  gazebo_ur5.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5.srdf
ur5_gripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur5_pickplace_task/: CMakeLists.txt  package.xml
ur5_pickplace_task/config/: pick_place_config.yaml
ur5_pickplace_task/include/ur5_pickplace_task/: PickPlaceTask.hpp
ur5_pickplace_task/launch/: pick_place_task.launch
ur5_pickplace_task/src/: pickplace_node.cpp  pickplacetask.cpp
